# clientAPI

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
examples/: emotiv.py  emotiv_test.py
src/reapi/: __init__.py  api.py  app.py  main.py  models.py  websockets.py
src/reapi/ai/: __init__.py  text.py
tests/: conftest.py  test_text.py  test_version.py
